--- a/views/index.html
+++ b/views/index.html
@@ -82,7 +82,7 @@
           <div class="form-group">
             <label for="email" class="control-label font-weight-bold">Email:</label>
             <input type="email" id="email" class="form-control" placeholder="Results will be sent to this email" name="email_returns" autocomplete="on" /><span style="color:red"> {{email_error_returns or ''}}</span></input><br><br>
-            <label for="upload" class="control-label font-weight-bold">Upload file with returned tyres</label><br>
+            <label for="upload" class="control-label font-weight-bold">Upload file with returned tyres (<a href="https://github.com/fridgelord/HK-returns/raw/master/data/input/return_sample.xlsx">template</a>)</label><br>
             <input type="file" id="upload" class="form-control-file" name="upload_returns" accept=".xlsx,.csv" /><span style="color:red"> {{file_error_returns or ''}}</span></input><br>
             <label for="customer_returns" class="control-label font-weight-bold">Customer number:</label>
             <input id="customer_returns" class="form-control" placeholder="Sold To party or Sold To current" name="customer_returns" autocomplete="on" /><span style="color:red"> {{customer_error_returns or ''}}</span></input><br>
